Bug 1362403 - update source coordinates after emitting loop bodies; r=jimb

MozReview-Commit-ID: CEJV2nSvg24

--HG--
extra : rebase_source : d607b725e4841233e176c639a8ec5c42ca7e86b4